Auto redirection back to home page after account verification

--- a/WPIMajorTracking/views/signup.html
+++ b/WPIMajorTracking/views/signup.html
@@ -65,10 +65,10 @@
 	</div>
 	{% endif %}
 	{% if user_verified %}
-	<form class='form' action='/' method='GET'>
-		<p>The email address has been verified.</p>
-		<input type="submit" class='btn btn-margin btn-success' value="Return Home"/>
+	<form id='redirectVerificationForm' class='form' action='/' method='GET'>
+		<p>The email address has been verified. You will be redirected back to the home page in 5 seconds...</p>
 	</form>
+	<script> delayFormSubmission('#redirectVerificationForm') </script>
 	{% endif %}
 </div>
 {% endblock %}
