--- a/WPIMajorTracking/css/majorTracking.css
+++ b/WPIMajorTracking/css/majorTracking.css
@@ -128,5 +128,15 @@ label.required::after {
     text-align: center;
 }
 
+.majorsheet-box {
+  margin-left: 30px;
+}
+
+.checkbox-inline {
+  margin: 20px;
+}
 
 
+.form-control {
+  margin: 10px;
+}
