--- a/WPIMajorTracking/views/resetpassword.html
+++ b/WPIMajorTracking/views/resetpassword.html
@@ -1,19 +1,19 @@
 {% extends "templates/main.html" %}
 
 {% block maincontent %}
-
+<script type='text/javascript' src='/js/script.js'></script>
 <div class='header'>
 	<h1>Reset password</h1>
 </div>
 
 <div class='center-block interaction-block' style='width: 50%; margin: auto;'>
 	{% if updated_password %}
-	<p>Password updated!</p>
-	<form action="/" method="get">
-		<input class='btn btn-margin btn-success' type='submit' value='Return Home'/>
+	<form id="redirectResetForm" action="/" method="GET">
+		<p>Password updated! You will be redirected back to the home page in 3 seconds...</p>
 	</form>
+	<script>delayFormSubmission('#redirectResetForm') </script>
 	{% else %}
-	<form action="/api/password" method="post">
+	<form id="formContainer" action="/api/password" method="post">
 		<div class='form-group'>
 	    	<label>New password</label>
 			<input class="form-control" type="password" name="password" />
